# HexUI

./: .gitignore  CONTRACT.md  IMPROVEMENTS.md  Makefile  QUICKSTART.md  README.md  TODO.md  demo-users.yaml  package-lock.json  package.json  specs.md  tailwind.preset.cjs
UI-generator-mcp/: DESIGN.md  README.md  package-lock.json  package.json  specs.md  tsconfig.json
UI-generator-mcp/src/: handlers.test.ts  handlers.ts  server.ts
backend-runtime/: README.md  pyproject.toml
backend-runtime/examples/: README.md
custom-UI/: README.md  package-lock.json  package.json  vite.config.ts
custom-UI/docs/: README.md  extending.md  getting-started.md  widgets.md  yaml-reference.md
custom-UI/src/: index.ts  shadcn.css  styles.css
custom-UI/tests/: llm-display.test.ts  llm-validate.test.ts  markdown-render.test.tsx  widgets-coverage.test.ts
demo/: CONTRACT.md
demo/agent-server/: .env.sample  pyproject.toml
demo/demo-agents-server/: app.py
demo/design/: Context Toggle (standalone).html
demo/hexgate-agent/: README.md  pyproject.toml
demo/hexgate-agent/src/hexgate_agent/: __init__.py  __main__.py  agent.py  app.py
demo/hexgate-agent/src/hexgate_agent/ui/: guard.yaml
demo/proxy/: pyproject.toml
docs/: README.md  extending.md  getting-started.md  widgets.md  yaml-reference.md
front-app/: README.md  index.html  package-lock.json  package.json  specs.md  tailwind.config.cjs  tsconfig.json  vite.config.ts
platform-backend/: pyproject.toml
proxy-server/: pyproject.toml
src/: index.ts  shadcn.css  styles.css
tests/: pipeline.test.ts  registry.test.tsx
(+196 files in other folders)
