[project]
name = "hexgate-agent"
version = "0.1.0"
description = "HexaUI backend serving a hexgate-wrapped agent — forwards hexgate's normalized events tagged framework='hexgate'"
# hexgate requires >=3.13; this backend inherits that floor (the other demo
# backends only need 3.11). Create this venv with a 3.13+ interpreter.
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "hexgate>=0.2",
]

[project.optional-dependencies]
# Only needed to run demo/scripts/verify_backend.py against this backend.
dev = ["httpx>=0.27", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hexgate_agent"]
